@@ -3,6 +3,7 @@ Changes for 2.2.2rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7417] expanded function last() with no parameters in map element labels and graph names (Ivo)
 A......... [ZBX-7338] fixed screen item validation (Eduard)
 ..F....... [ZBX-7427] fixed element links not being rendered correctly between host groups and other elements (Pavels)
 
